--- a/design/css/style.css
+++ b/design/css/style.css
@@ -58,7 +58,7 @@ body {
   background: white;
   padding: 0.9375rem 1.875rem;
   border-radius: 1.5625rem;
-  transition: all 0.3 ease-in;
+  transition: all 0.2s ease-in;
 }
 .car-style {
   font-size: 2.5rem;
